--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -2966,6 +2966,22 @@ paths:
 components:
   schemas:
     amexProgramResponse:
+      x-model-version: 1.0
+      properties:
+        amexProgramResponse:
+          $ref: '#/components/schemas/amexProgramCodes'
+          example: 
+            "amexProgramAssetCodes": [
+                {
+                    "code": "OPTBLUE",
+                    "name": "American Express(AMEX) OptBlue"
+                },
+                {
+                    "code": "ESA",
+                    "name": "American Express(AMEX) ESA"
+                }
+            ]
+    amexProgramCodes:
       type: array
       items:
         properties:
